# pomelo-detection-system

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  main.py  pyproject.toml  requirements.txt
data/: README.md
docker/: Dockerfile  docker-compose.yaml
grafana_data/: grafana.db
notebooks/: download_image.ipynb
prometheus/: prometheus.yml
src/pomelo_detection/: base_detector.py  base_detector_config.py  detector_result.py
src/pomelo_detection/random/: random_detector.py  random_detector_config.py
src/pomelo_utils/: bytes_processing.py
