[project]
name = "pomelo-detection-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=6.29.5",
    "scikit-learn>=1.6.1",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "black[jupyter]>=25.1.0",
    "isort>=6.0.1",
    "pandas>=2.2.3",
    "roboflow>=1.1.62",
]
