[project]
name = "pomelo-detection-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "albumentations>=2.0.6",
    "ipykernel>=6.29.5",
    "opencv-python>=4.11.0.86",
    "scikit-learn>=1.6.1",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "black[jupyter]>=25.1.0",
    "isort>=6.0.1",
    "pandas>=2.2.3",
    "roboflow>=1.1.62",
]
